--- a/src/swiftping/animplayer/AnimAnnotator.mxml
+++ b/src/swiftping/animplayer/AnimAnnotator.mxml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		  xmlns:s="library://ns.adobe.com/flex/spark" 
-		  xmlns:mx="library://ns.adobe.com/flex/mx" 
-		  xmlns:ap="swiftping.animplayer.*"
-		  width="400" height="300"
-		  initialize="controller.Initialize(this)">
-	
-	<fx:Script>
+<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+          xmlns:s="library://ns.adobe.com/flex/spark"
+          width="400" height="300"
+          initialize="controller.Initialize(this)">
+
+    <fx:Script>
 		<![CDATA[
-			import swiftping.animplayer.AnimController
-			[Bindable] public var controller:AnimController = new AnimController();
-		]]>
+        [Bindable]
+        public var controller:AnimController = new AnimController();
+        ]]>
 	</fx:Script>
 	
 	<fx:Binding source="currentFrameStepper.value" destination="controller.animPlayer.currentFrame" twoWay="true"/>
