--- a/src/SwiftPing.mxml
+++ b/src/SwiftPing.mxml
@@ -1,58 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <s:Application
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/mx"
-	xmlns:ap="swiftping.animplayer.*"
-	xmlns:swiftping="swiftping.*"
-	applicationComplete="complete()">
-	
-	<fx:Script>
+        xmlns:fx="http://ns.adobe.com/mxml/2009"
+        xmlns:s="library://ns.adobe.com/flex/spark"
+        applicationComplete="complete()">
+
+    <fx:Script>
 		<![CDATA[
-			import swiftping.Controller
-			import swiftping.utils.Log
-			import mx.controls.Alert
-			
-			public var controller:swiftping.Controller = null
-			
-			public function complete():void
-			{			
-				Log.log("App startup")
-				NativeApplication.nativeApplication.addEventListener(InvokeEvent.INVOKE, onInvoke)
-				flash.media.SoundMixer.soundTransform = new SoundTransform(0);	//Disable sound lest annoying flash clips may bother users
-				stage.frameRate = 10000
-				
-				loaderInfo.uncaughtErrorEvents.addEventListener(UncaughtErrorEvent.UNCAUGHT_ERROR, onUncaughtError)
-			}
-			
-			private function onInvoke(e:InvokeEvent):void
-			{
-				Log.log("Invoke event: (" + e.currentDirectory.nativePath + "): " + e.arguments)
-				if (controller == null)
-				{
-					controller = new Controller(e.arguments, e.currentDirectory)
-				}
-				else
-				{
-					//TODO	
-				}
-			}
-			
-			private function onUncaughtError(e:UncaughtErrorEvent):void
-			{
-				
-				Alert.show("error", "Unhandled Error!")
-				if (e.error is Error)
-				{
-					var error:Error = e.error as Error
-					var errorMessage:String = error.getStackTrace()
-					Alert.show(errorMessage, "Unhandled Error!")
-					Log.log(errorMessage)
-					//NativeApplication.nativeApplication.exit(1)
-				}
-			}
-		]]>
+        import mx.controls.Alert
+        import swiftping.Controller
+        import swiftping.utils.Log
+
+        public var controller:Controller = null
+
+        public function complete():void {
+            Log.log("App startup")
+            NativeApplication.nativeApplication.addEventListener(InvokeEvent.INVOKE, onInvoke)
+            SoundMixer.soundTransform = new SoundTransform(0);	//Disable sound lest annoying flash clips may bother users
+            stage.frameRate = 10000
+
+            loaderInfo.uncaughtErrorEvents.addEventListener(UncaughtErrorEvent.UNCAUGHT_ERROR, onUncaughtError)
+        }
+
+        private function onInvoke(e:InvokeEvent):void {
+            Log.log("Invoke event: (" + e.currentDirectory.nativePath + "): " + e.arguments)
+            if (controller == null) {
+                controller = new Controller(e.arguments, e.currentDirectory)
+            }
+            else {
+                //TODO
+            }
+        }
+
+        private function onUncaughtError(e:UncaughtErrorEvent):void {
+
+            Alert.show("error", "Unhandled Error!")
+            if (e.error is Error) {
+                var error:Error = e.error as Error
+                var errorMessage:String = error.getStackTrace()
+                Alert.show(errorMessage, "Unhandled Error!")
+                Log.log(errorMessage)
+                //NativeApplication.nativeApplication.exit(1)
+            }
+        }
+        ]]>
 	</fx:Script>
 	
 </s:Application>
